--- a/activities/03-moving-shapes/index.html
+++ b/activities/03-moving-shapes/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <title>Anthony's Exercise 1: I like to move it!</title>
+    <title>Anthony's Moving Shapes</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
