Updated main index page.

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@ Special thank you for:
           <div class="text-container">
             <h1 class="h1-large">Anthony Lum's CART 253 Landing Page</h1>
             <p class="p-large">Explore the mind and works of Anthony Lum as he attempts to complete his final semester on the fumes of old coffee at all hours.</p>
-            <a class="btn-solid-lg page-scroll" href="activities/">Activitites</a>
-            <a class="btn-solid-lg page-scroll" href="exercise/">Exercises</a>
-            <a class="btn-solid-lg page-scroll" href="projects/">Projects</a>
+            <a class="btn-solid-lg page-scroll" href="activities/02-draw-an-alien">A2: Drawn an Alien</a>
+            <a class="btn-solid-lg page-scroll" href="activities/03-moving-shapes">A3: Moving Shapes</a>
+            <a class="btn-solid-lg page-scroll" href="exercise/i_like_to_move_it">E1: I like to move it</a>
           </div> <!-- end of text-container -->
         </div> <!-- end of col -->
         <div class="col-lg-6">
