--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ Special thank you for:
             <a class="btn-solid-lg page-scroll" href="activities/02-draw-an-alien">A2: Drawn an Alien</a>
             <a class="btn-solid-lg page-scroll" href="activities/03-moving-shapes">A3: Moving Shapes</a>
             <a class="btn-solid-lg page-scroll" href="exercise/i_like_to_move_it">E1: I like to move it</a>
+            <a class="btn-solid-lg page-scroll" href="exercise/dodge_em">E2: Dodge-Em</a>
           </div> <!-- end of text-container -->
         </div> <!-- end of col -->
         <div class="col-lg-6">
