--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ Special thank you for:
             <a class="btn-solid-lg page-scroll" href="exercise/love_actually">E3: Love, Actually</a>
             <a class="btn-solid-lg page-scroll" href="projects/project1">P1: Attack of the Assignments</a>
             <a class="btn-solid-lg page-scroll" href="exercise/age_of_aquariums">E4: The Age of Aquariums</a>
+            <a class="btn-solid-lg page-scroll" href="exercise/juggle_garden">E5: Juggle Garden</a>
           </div> <!-- end of text-container -->
         </div> <!-- end of col -->
         <div class="col-lg-6">
